--- a/map.css
+++ b/map.css
@@ -31,3 +31,11 @@ body {
   height: 100%;
   pointer-events: none; 
 }
+
+#map svg circle {
+  pointer-events: auto;
+  fill: steelblue;
+  fill-opacity: 0.6;
+  stroke: white;
+  stroke-width: 1;
+}
